--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,8 +1,8 @@
 @import './variables/variables';
 
-@import './components/footer';
-@import './components/header';
+//@import './components/footer';
+//@import './components/header';
 @import './components/instagram';
-@import './components/menu';
+//@import './components/menu';
 
-@import './pages/index';
+//@import './pages/index';
